--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Silver Oak Contracting</title>
   <meta name="description" content="Structural steel fabrication and erection.">
+
+  <!-- Tougher typography: Oswald for headings, Source Sans 3 for body -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Source+Sans+3:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Inline critical CSS so you don't have to change styles.css right now -->
   <style>
     :root{
+      /* Light, mostly-white palette + soft brand */
       --neutral-100:#ffffff;
       --neutral-200:#f7f9f8;
       --neutral-300:#eceeec;
       --neutral-400:#dee2df;
+
       --brand-100:#eafaf0;
       --brand-200:#c8f0d6;
       --brand-300:#a3e3b9;
       --brand-400:#7fd79b;
+
       --bg: var(--neutral-100);
       --text:#191f1a;
       --text-dim:#5a665f;
@@ -25,55 +32,81 @@
       --radius:4px;
       --shadow:0 2px 10px rgba(0,0,0,.06);
     }
+
     *{box-sizing:border-box}
     body{
-      margin:0;
-      background:var(--bg);
-      color:var(--text);
+      margin:0;background:var(--bg);color:var(--text);
       font-family:'Source Sans 3',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
       line-height:1.6;
     }
+    img{max-width:100%;display:block;height:auto}
+    a{text-decoration:none;color:inherit}
+
     h1,h2,h3{margin:0;font-family:'Oswald',Impact,Arial Narrow,sans-serif}
     h1{font-size:clamp(32px,5vw,54px);font-weight:700}
     h2{font-size:clamp(26px,3.2vw,38px);font-weight:700}
+    h3{font-size:20px;font-weight:500}
+
     .container{max-width:1140px;margin:0 auto;padding:0 24px}
-    .section{padding:clamp(48px,7vw,88px) 0;border-top:1px solid var(--line)}
+    .section{padding:clamp(48px,7vw,88px) 0;border-top:1px solid var(--line);background:#fff}
     .section:first-of-type{border-top:none}
-    img{max-width:100%;display:block}
-    .header-section{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--line);backdrop-filter:blur(6px);}
+
+    /* Header */
+    .header-section{
+      position:sticky;top:0;z-index:50;
+      background:#fff;border-bottom:1px solid var(--line);
+      backdrop-filter:blur(6px) saturate(1.05);
+    }
     .navbar{display:flex;justify-content:space-between;align-items:center;padding:12px 0}
     .brand-wrap{display:flex;align-items:center;gap:10px}
     .brand-logo{width:36px;height:36px;object-fit:contain}
+    .brand-name{font-weight:700;letter-spacing:.3px}
     .nav-links{display:flex;gap:18px;align-items:center}
-    .nav-links a{color:var(--text-dim);font-weight:600;text-decoration:none}
+    .nav-links a{color:var(--text-dim);font-weight:600}
     .nav-links a:hover{color:var(--text)}
-    .nav-cta{padding:10px 16px;border-radius:var(--radius);background:var(--brand-300);color:#0e140f;font-weight:700;border:1px solid var(--brand-200);box-shadow:var(--shadow);}
-    .section--hero{background:#fff;position:relative;min-height:70vh;display:flex;align-items:center;overflow:hidden}
+    .nav-cta{
+      padding:10px 16px;border-radius:var(--radius);
+      background:var(--brand-300);color:#0e140f;font-weight:700;
+      border:1px solid var(--brand-200);box-shadow:var(--shadow);
+    }
+
+    /* Hero */
+    .section--hero{position:relative;min-height:70vh;display:flex;align-items:center;overflow:hidden}
     .hero-video{position:absolute;inset:0;z-index:0}
     .hero-video video{
-      width:100%;
-      height:100%;
-      object-fit:cover;
-      opacity:.38; /* brighter */
-      filter:grayscale(10%) brightness(106%);
+      width:100%;height:100%;object-fit:cover;
+      opacity:.42; /* visible on white; bump to .55 if you want stronger */
+      filter:grayscale(8%) brightness(106%);
     }
     .hero-overlay{
-      position:absolute;
-      inset:0;
-      z-index:1;
-      background:linear-gradient(180deg,rgba(255,255,255,.12),rgba(255,255,255,.45));
+      position:absolute;inset:0;z-index:1;
+      background:linear-gradient(180deg,rgba(255,255,255,.1),rgba(255,255,255,.42));
     }
     .hero-content{position:relative;z-index:2;max-width:900px;margin:auto;padding:0 24px;text-align:center}
-    .hero-kicker{display:inline-block;margin-bottom:12px;padding:6px 10px;font-weight:700;font-size:12px;text-transform:uppercase;background:var(--brand-100);border:1px solid var(--brand-200);border-radius:var(--radius);}
-    .btn{display:inline-flex;align-items:center;justify-content:center;padding:10px 16px;margin:6px;border-radius:var(--radius);font-weight:700;border:1px solid var(--line);background:#fff;color:var(--text);box-shadow:var(--shadow);text-decoration:none}
+    .hero-kicker{
+      display:inline-block;margin-bottom:12px;padding:6px 10px;
+      font-weight:700;font-size:12px;text-transform:uppercase;letter-spacing:.4px;
+      background:var(--brand-100);border:1px solid var(--brand-200);border-radius:var(--radius);
+    }
+    .btn{
+      display:inline-flex;align-items:center;justify-content:center;
+      padding:10px 16px;margin:6px;border-radius:var(--radius);font-weight:700;
+      border:1px solid var(--line);background:#fff;color:var(--text);box-shadow:var(--shadow);
+    }
     .btn.primary{background:var(--brand-300);color:#0e140f;border-color:var(--brand-200)}
     .btn.primary:hover{background:var(--brand-400)}
+
+    /* Sections */
     .about-grid,.contact-grid,.projects-head{display:grid;gap:24px}
     .grid-3{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px}
+
     .card{background:#fff;border:1px solid var(--line);border-radius:var(--radius);padding:16px;box-shadow:var(--shadow)}
     .proj-card{background:#fff;border:1px solid var(--line);border-radius:var(--radius);overflow:hidden;box-shadow:var(--shadow)}
     .proj-body{padding:16px}
+
+    /* Footer */
     footer{border-top:1px solid var(--line);background:#fff;padding:40px 0;text-align:center}
+    .dim{color:var(--text-dim)}
   </style>
 </head>
 <body>
@@ -93,14 +126,16 @@
     </div>
   </header>
 
-  <section class="section section--hero hero-section" id="home" aria-label="Hero">
+  <!-- HERO -->
+  <section class="section section--hero" id="home" aria-label="Hero">
     <div class="hero-video">
-      <video autoplay muted playsinline loop poster="images/hero-static.jpg">
-        <source src="videos/videoplayback-transcode.mp4?v=2" type="video/mp4">
+      <!-- Minimal, MP4-only; JS below will set the correct path and poster -->
+      <video autoplay muted playsinline loop>
         Your browser does not support HTML5 video.
       </video>
     </div>
     <div class="hero-overlay"></div>
+
     <div class="hero-content">
       <div class="hero-kicker">Structural Steel Specialists</div>
       <h1>Precision-built steel. On schedule. On budget.</h1>
@@ -112,6 +147,7 @@
     </div>
   </section>
 
+  <!-- ABOUT -->
   <section id="about" class="section">
     <div class="container about-grid">
       <div>
@@ -127,30 +163,66 @@
     </div>
   </section>
 
+  <!-- SERVICES -->
   <section id="services" class="section">
     <div class="container">
       <h2 class="center">Services</h2>
-      <div class="grid-3 mt-24">
-        <article class="card"><img src="https://picsum.photos/640/420?random=201" alt="Fabrication"><h3>Fabrication</h3><p>Shop-grade components delivered to spec with material tracking and QA reports.</p></article>
-        <article class="card"><img src="https://picsum.photos/640/420?random=202" alt="Erection"><h3>Erection</h3><p>Certified field crews, rigging, and on-site welding with OSHA-focused site protocols.</p></article>
-        <article class="card"><img src="https://picsum.photos/640/420?random=203" alt="Support"><h3>Project Support</h3><p>Steel takeoffs, RFIs, and coordination with GCs and trades, plus schedule alignment.</p></article>
+      <div class="grid-3" style="margin-top:24px">
+        <article class="card">
+          <img src="https://picsum.photos/640/420?random=201" alt="Fabrication">
+          <h3>Fabrication</h3>
+          <p>Shop-grade components delivered to spec with material tracking and QA reports.</p>
+        </article>
+        <article class="card">
+          <img src="https://picsum.photos/640/420?random=202" alt="Erection">
+          <h3>Erection</h3>
+          <p>Certified field crews, rigging, and on-site welding with OSHA-focused site protocols.</p>
+        </article>
+        <article class="card">
+          <img src="https://picsum.photos/640/420?random=203" alt="Support">
+          <h3>Project Support</h3>
+          <p>Steel takeoffs, RFIs, coordination with GCs and trades, plus schedule alignment.</p>
+        </article>
       </div>
     </div>
   </section>
 
+  <!-- PROJECTS -->
   <section id="projects" class="section">
     <div class="container">
-      <div class="projects-head"><h2>Projects</h2><a class="btn" href="#contact">Request Full Portfolio</a></div>
-      <div class="grid-3 mt-16">
-        <article class="proj-card"><img src="https://picsum.photos/960/540?random=301" alt="Project A"><div class="proj-body"><h3>Industrial Expansion — Phase II</h3><p class="dim">120,000 sq ft facility steel package delivered on time.</p></div></article>
-        <article class="proj-card"><img src="https://picsum.photos/960/540?random=302" alt="Project B"><div class="proj-body"><h3>Distribution Center Retrofit</h3><p class="dim">Complex retrofit with live operations coordination.</p></div></article>
-        <article class="proj-card"><img src="https://picsum.photos/960/540?random=303" alt="Project C"><div class="proj-body"><h3>Medical Complex Connector</h3><p class="dim">Multi-span connectors requiring precision welding.</p></div></article>
+      <div class="projects-head" style="grid-template-columns:1fr auto">
+        <h2>Projects</h2>
+        <a class="btn" href="#contact">Request Full Portfolio</a>
+      </div>
+      <div class="grid-3" style="margin-top:16px">
+        <article class="proj-card">
+          <img src="https://picsum.photos/960/540?random=301" alt="Project A">
+          <div class="proj-body">
+            <h3>Industrial Expansion — Phase II</h3>
+            <p class="dim">120,000 sq ft facility steel package delivered on time.</p>
+          </div>
+        </article>
+        <article class="proj-card">
+          <img src="https://picsum.photos/960/540?random=302" alt="Project B">
+          <div class="proj-body">
+            <h3>Distribution Center Retrofit</h3>
+            <p class="dim">Complex retrofit with live operations coordination.</p>
+          </div>
+        </article>
+        <article class="proj-card">
+          <img src="https://picsum.photos/960/540?random=303" alt="Project C">
+          <div class="proj-body">
+            <h3>Medical Complex Connector</h3>
+            <p class="dim">Multi-span connectors requiring precision welding.</p>
+          </div>
+        </article>
       </div>
     </div>
   </section>
 
+  <!-- CONTACT -->
   <section id="contact" class="section">
-    <div class="container contact-grid">
+    <div class="container contact-grid" style="grid-template-columns:1fr 1.1fr">
       <div class="card">
         <h2>Contact</h2>
         <p class="dim">Have drawings or a bid request? Send it over and we’ll get you scheduled.</p>
@@ -169,6 +241,7 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer>
     <div class="container">
       <h3>Silver Oak Contracting</h3>
@@ -176,21 +249,55 @@
     </div>
   </footer>
 
+  <!-- Minimal JS: set year + force MP4 path(s) + poster -->
   <script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-  // Force MP4 source and reload video
-  (function(){
-    var v=document.querySelector('.hero-video video');
-    if(!v)return;
-    v.autoplay=v.muted=v.playsInline=v.loop=true;
-    v.poster='images/hero-static.jpg';
-    v.innerHTML='';
-    var s=document.createElement('source');
-    s.src='videos/videoplayback-transcode.mp4?v=2';
-    s.type='video/mp4';
-    v.appendChild(s);
-    try{v.load();v.play();}catch(e){}
-  })();
+    // Footer year
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Hero video fix for GitHub Pages — MP4 only + common path fallbacks.
+    (function () {
+      // Put your MP4 in one of these paths (case-sensitive). The first that exists will be used.
+      var candidates = [
+        "videos/videoplayback-transcode.mp4",
+        "videos/hero.mp4",
+        "videos/video.mp4",
+        "hero.mp4",
+        "video.mp4"
+      ];
+      var poster = "images/hero-static.jpg"; // optional still; ok if it doesn't exist
+
+      var v = document.querySelector(".hero-video video");
+      if (!v) return;
+
+      v.setAttribute("autoplay","");
+      v.setAttribute("muted","");
+      v.setAttribute("playsinline","");
+      v.setAttribute("loop","");
+      v.setAttribute("poster", poster);
+
+      // Try each candidate path until one loads
+      function tryNext(i){
+        if(i >= candidates.length){
+          console.warn("No hero video found at:", candidates);
+          return;
+        }
+        var src = candidates[i] + "?v=" + Date.now(); // cache-bust
+        // Try a HEAD request to see if the file exists
+        fetch(src, {method:"HEAD"}).then(function(r){
+          if(r.ok){
+            v.innerHTML = "";
+            var s = document.createElement("source");
+            s.src = src;
+            s.type = "video/mp4";
+            v.appendChild(s);
+            try { v.load(); v.play(); } catch(e){}
+          }else{
+            tryNext(i+1);
+          }
+        }).catch(function(){ tryNext(i+1); });
+      }
+      tryNext(0);
+    })();
   </script>
 </body>
 </html>
